Fix failure in Java 8