@@ -22,6 +22,8 @@ import org.hamcrest.Description;
 import org.hamcrest.StringDescription;
 import org.junit.jupiter.api.*;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -87,7 +89,7 @@ class DeepEqualsMatcherTest {
     @Test
     void testIgnoredFieldOnEvent(){
         DeepEqualsMatcher<SomeEvent> testSubject = new DeepEqualsMatcher<>(new SomeEvent("someField"), new MatchAllFieldFilter(
-                List.of(new IgnoreField(SomeEvent.class, "someField"))));
+                Arrays.asList((new IgnoreField(SomeEvent.class, "someField")))));
         boolean result = testSubject.matches(new SomeEvent("otherField"));
         assertTrue(result);
     }
